Final test project with JSON from file

--- a/PryanikiTestCase/View/Base.lproj/Main.storyboard
+++ b/PryanikiTestCase/View/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                                             <constraint firstAttribute="width" secondItem="VIP-HL-Q1G" secondAttribute="height" multiplier="1:1" id="wrL-y2-AmY"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BzC-ic-no4">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BzC-ic-no4">
                                         <rect key="frame" x="100" y="10" width="265" height="80"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
